--- a/slides/css/common.css
+++ b/slides/css/common.css
@@ -37,6 +37,15 @@
     font-size: 1em;
 }
 
+.reveal :not(pre) > code > strong {
+    all: unset;
+    font-weight: bold;
+    color: hsl(var(--highlight-color-h), var(--highlight-color-s), 45%);
+    text-shadow:
+        -1px -1px 1px hsl(var(--highlight-color-h), var(--highlight-color-s), 80%);
+        1px 1px 1px hsl(var(--highlight-color-h), var(--highlight-color-s), 30%);
+}
+
 .reveal strong {
     text-transform: uppercase;
     font-size: .8em;
