slides: allow defining code color via CSS variables

--- a/slides/css/common.css
+++ b/slides/css/common.css
@@ -30,7 +30,7 @@
 
 .reveal :not(pre) > code {
     background-color: #0001;
-    color: #333;
+    color: var(--code-color, #333);
     padding: .15ex;
     display: inline-block;
     border-radius: .1ex;
