slides: add fonts for math
No shure if that will be a good one though...

--- a/slides/css/common.css
+++ b/slides/css/common.css
@@ -83,6 +83,10 @@
     background-color: #fff6;
 }
 
+.reveal .local-math-font {
+    font-family: 'Charm', cursive;
+}
+
 
 
 /*****************************************************************************
