slides: remove space between paragraphs and lists

--- a/slides/css/common.css
+++ b/slides/css/common.css
@@ -51,6 +51,11 @@
     font-size: .8em;
 }
 
+.reveal p + ul,
+.reveal p + ol {
+    margin-top: -1ex;
+}
+
 
 
 /*****************************************************************************
